<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginDK" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginText"
        android:layout_below="@+id/loginText"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/passwordFieldDK" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignRight="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/passwordFieldDK"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/createNewUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="83dp"
        android:text="@string/create_userDK" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createNewUserText"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="22dp"
        android:text="@string/loginButtonDK" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/createNewUserText"
        android:layout_below="@+id/createNewUserText"
        android:layout_marginTop="23dp"
        android:text="@string/create_user_buttonDK" />

</RelativeLayout>